tooling/nargo_cli/tests/snapshots/execution_success/modulus/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [u8; 32], v1: [u1; 254]):
    (no terminator instruction)
}
